<resources>
    <string name="app_name">App Order Tour</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--Login text-->
    <string name="login_input_email">Nhập email</string>
    <string name="login_input_pass">Nhập lại mật khẩu</string>
    <string name="login_button">Đi thôi!</string>
    <string name="login_register">Bạn chưa có tài khoản?</string>

    <!--   Menu main bottom -->
    <string name="home_menu">Trang chủ</string>
    <string name="chat_menu">Tin nhắn</string>
    <string name="preferential_menu">Ưu đãi</string>
    <string name="order_menu">Đơn hàng</string>
    <string name="account_menu">Tài khoản</string>

    <!--    page detail tour-->
    <string name="overview_detail_fragment">Tổng quan</string>
    <string name="activities_detail_fragment">Hoạt động</string>
    <string name="images_detail_fragment">Ảnh</string>
    <string name="review_detail_fragment">Đánh giá</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>