<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_nav_bt"
        android:icon="@drawable/home_nav"
        android:title="@string/home_menu" />

    <item
        android:id="@+id/chat_nav_bt"
        android:icon="@drawable/chat_nav"
        android:title="@string/chat_menu" />

    <item
        android:id="@+id/sale_nav_bt"
        android:icon="@drawable/sale_price_tag_nav"
        android:title="@string/preferential_menu" />

    <item
        android:id="@+id/order_nav_bt"
        android:icon="@drawable/cart_nav"
        android:title="@string/order_menu" />

    <item
        android:id="@+id/account_nav_bt"
        android:icon="@drawable/account_nav"
        android:title="@string/account_menu" />

</menu>